[gd_scene load_steps=3 format=3 uid="uid://csdqil3jt2edm"]

[ext_resource type="Script" path="res://end_screen.gd" id="1_llsi5"]
[ext_resource type="PackedScene" uid="uid://cnkmw63nj2yxw" path="res://scenes/sample.tscn" id="2_d8skv"]

[node name="End Screen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_llsi5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "
Congratulations!

"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Title Screen"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Sample" parent="." instance=ExtResource("2_d8skv")]

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
